# Build

V1/: CMakeLists.txt
V1/src/: add.cpp  div.cpp  mult.cpp  sub.cpp
V2/: CMakeLists.txt
V3/: CMakeLists.txt
V4/: CMakeLists.txt
V4/include/: head.h
V5/: CMakeLists.txt
V5/src/: main.cpp
V6/: CMakeLists.txt  test.cpp
mutil/: CMakeLists.txt
mutil/calc/: CMakeLists.txt  div.cpp
mutil/include/: calc.h
mutil/sort/: CMakeLists.txt  insert.cpp
mutil/test1/: CMakeLists.txt  test1.cpp
mutil/test2/: CMakeLists.txt  test2.cpp
mutil_plus/calc/: CMakeLists.txt
mutil_plus/sort/: CMakeLists.txt  insert.cpp
mutil_plus/test/: sort.cpp
mutil_plus_plus/: CMakeLists.txt
mutil_plus_plus/calc/: mult.cpp  sub.cpp
mutil_plus_plus/sort/: CMakeLists.txt
mutil_shared/calc/: CMakeLists.txt  add.cpp
mutil_shared/include/: sort.h
mutil_shared/sort/: CMakeLists.txt  select.cpp
mutil_shared/test/: CMakeLists.txt
